--- a/styles/customcss/style.css
+++ b/styles/customcss/style.css
@@ -60,7 +60,7 @@
 .gallery-p {
     font-size: 300%;
     font-family: verdana;
-    color: #e6e6e6;
+    color: #171717;
 }
 
 .img-gallery {
@@ -181,12 +181,6 @@ table {
     /* transition: 1s; */
 }
 
-#savedataalert {
-    display: none;
-    height: 45px;
-    /* vertical-align: middle; */
-}
-
 .alertbox {
     width: 95%;
     background-color: #ffe599;
@@ -211,4 +205,7 @@ table {
     /* box-sizing: border-box; */
 }
 
-.alertboxclose:hover {}
+#formsuccess {
+    display: none;
+    box-sizing: border-box;
+}
