--- a/styles/customcss/style.css
+++ b/styles/customcss/style.css
@@ -2,12 +2,10 @@
             Common
 ********************************************* */
 
-
-/* .body{
-    /* background-color:#1a1a1a; */
-
-
-/* } */
+body {
+    font-family: Verdana, sans-serif;
+    margin: 0
+}
 
 .centered {
     position: absolute;
@@ -208,4 +206,8 @@ table {
 #formsuccess {
     display: none;
     box-sizing: border-box;
+}
+
+.nav-item {
+    cursor: pointer;
 }
