--- a/styles/customcss/style.css
+++ b/styles/customcss/style.css
@@ -231,7 +231,7 @@ table {
     min-height: 40px;
     width: 350px;
     display: flex;
+    justify-content: center;
     align-items: center;
-    text-align: justify;
     border-radius: 10px;
 }
